chore: use @fuf-stack/typescript-config

--- a/packages/config/storybook-config/tsconfig.json
+++ b/packages/config/storybook-config/tsconfig.json
@@ -1,4 +1,4 @@
 {
-  "extends": "../../../tsconfig.base.json",
+  "extends": "@fuf-stack/typescript-config/base.json",
   "references": [{ "path": "../../pixels" }]
 }
