chore: do not clean dist folder between builds

--- a/packages/pixel-motion/package.json
+++ b/packages/pixel-motion/package.json
@@ -39,7 +39,7 @@
   },
   "scripts": {
     "build": "tsup --config node_modules/@repo/tsup-config/config.ts",
-    "prepack": "rm -rf ./dist && pnpm build"
+    "prepack": "pnpm build"
   },
   "dependencies": {
     "framer-motion": "11.15.0"
