--- a/packages/pixels/package.json
+++ b/packages/pixels/package.json
@@ -122,7 +122,7 @@
   },
   "scripts": {
     "build": "tsup --config node_modules/@repo/tsup-config/config.ts --dts-resolve",
-    "prepack": "rm -rf ./dist && pnpm build",
+    "prepack": "pnpm build",
     "test": "vitest ./src"
   },
   "peerDependencies": {
