--- a/packages/config/storybook-config/package.json
+++ b/packages/config/storybook-config/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "storybook": "storybook dev -p 6006",
-    "storybook:build": "rm -rf ./dist && storybook build --quiet",
+    "storybook:build": "storybook build --quiet",
     "test": "test-storybook"
   },
   "devDependencies": {
