chore: format .release-please-manifest.json

--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -1,1 +1,7 @@
-{"packages/pixel-utils":"0.4.3","packages/pixels":"0.30.0","packages/veto":"0.8.1","packages/uniform":"0.15.0","packages/pixel-motion":"1.0.6"}
+{
+  "packages/pixel-motion": "1.0.6",
+  "packages/pixel-utils": "0.4.3",
+  "packages/pixels": "0.30.0",
+  "packages/uniform": "0.15.0",
+  "packages/veto": "0.8.1"
+}
