--- a/packages/pixels/package.json
+++ b/packages/pixels/package.json
@@ -49,6 +49,11 @@
       "import": "./dist/Card/index.js",
       "require": "./dist/Card/index.cjs"
     },
+    "./Drawer": {
+      "types": "./dist/Drawer/index.d.ts",
+      "import": "./dist/Drawer/index.js",
+      "require": "./dist/Drawer/index.cjs"
+    },
     "./hooks": {
       "types": "./dist/hooks/index.d.ts",
       "import": "./dist/hooks/index.js",
@@ -139,6 +144,7 @@
     "@nextui-org/card": "2.2.9",
     "@nextui-org/chip": "2.2.6",
     "@nextui-org/divider": "2.2.5",
+    "@nextui-org/drawer": "2.2.7",
     "@nextui-org/dropdown": "2.3.9",
     "@nextui-org/modal": "2.2.7",
     "@nextui-org/popover": "2.3.9",
