--- a/turbo.json
+++ b/turbo.json
@@ -4,7 +4,7 @@
   "tasks": {
     "build": {
       "dependsOn": ["^build"],
-      "outputs": ["dist/**"],
+      "outputs": ["dist/**", "node_modules/.cache/tsbuildinfo.json"],
       "outputLogs": "new-only"
     },
     "dev": {
