feat(pixels): add alert component and fix some issues
#689

--- a/packages/pixels/package.json
+++ b/packages/pixels/package.json
@@ -19,6 +19,11 @@
       "import": "./dist/Accordion/index.js",
       "require": "./dist/Accordion/index.cjs"
     },
+    "./Alert": {
+      "types": "./dist/Alert/index.d.ts",
+      "import": "./dist/Alert/index.js",
+      "require": "./dist/Alert/index.cjs"
+    },
     "./Avatar": {
       "types": "./dist/Avatar/index.d.ts",
       "import": "./dist/Avatar/index.js",
