feat(tailwind-config,pixels,uniform,pixel-utils): migrate nextUI to heroUI
#703

--- a/renovate.json5
+++ b/renovate.json5
@@ -25,10 +25,10 @@
       groupName: '@dnd-kit monorepo',
     },
 
-    // @nextui monorepo
+    // @heroui monorepo
     {
-      matchPackageNames: ['/^@nextui-org/'],
-      groupName: '@nextui monorepo',
+      matchPackageNames: ['/^@heroui/'],
+      groupName: '@heroui monorepo',
     },
 
     // framer-motion not patch releases (rate-limiting)
