--- a/packages/config/tailwind-config/package.json
+++ b/packages/config/tailwind-config/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "main": "index.js",
   "devDependencies": {
-    "@nextui-org/theme": "2.4.5",
+    "@heroui/theme": "2.4.5",
     "autoprefixer": "10.4.20",
     "tailwindcss": "3.4.17"
   }
