--- a/packages/pixel-utils/package.json
+++ b/packages/pixel-utils/package.json
@@ -41,7 +41,7 @@
     "prepack": "pnpm build"
   },
   "dependencies": {
-    "@nextui-org/theme": "2.4.5",
+    "@heroui/theme": "2.4.6",
     "classnames": "2.5.1",
     "tailwind-merge": "2.6.0",
     "tailwind-variants": "0.3.1"
