--- a/packages/pixels/package.json
+++ b/packages/pixels/package.json
@@ -146,26 +146,26 @@
   },
   "dependencies": {
     "@fuf-stack/pixel-utils": "workspace:*",
-    "@nextui-org/alert": "2.2.9",
-    "@nextui-org/avatar": "2.2.6",
-    "@nextui-org/accordion": "2.2.7",
-    "@nextui-org/badge": "2.2.5",
-    "@nextui-org/breadcrumbs": "2.2.6",
-    "@nextui-org/button": "2.2.9",
-    "@nextui-org/card": "2.2.9",
-    "@nextui-org/chip": "2.2.6",
-    "@nextui-org/divider": "2.2.5",
-    "@nextui-org/drawer": "2.2.7",
-    "@nextui-org/dropdown": "2.3.9",
-    "@nextui-org/modal": "2.2.7",
-    "@nextui-org/popover": "2.3.9",
-    "@nextui-org/progress": "2.2.6",
-    "@nextui-org/scroll-shadow": "2.3.5",
-    "@nextui-org/system": "2.4.6",
-    "@nextui-org/table": "2.2.8",
-    "@nextui-org/theme": "2.4.5",
-    "@nextui-org/tabs": "2.2.7",
-    "@nextui-org/tooltip": "2.2.7",
+    "@heroui/alert": "2.2.10",
+    "@heroui/avatar": "2.2.7",
+    "@heroui/accordion": "2.2.8",
+    "@heroui/badge": "2.2.6",
+    "@heroui/breadcrumbs": "2.2.7",
+    "@heroui/button": "2.2.10",
+    "@heroui/card": "2.2.10",
+    "@heroui/chip": "2.2.7",
+    "@heroui/divider": "2.2.6",
+    "@heroui/drawer": "2.2.8",
+    "@heroui/dropdown": "2.3.10",
+    "@heroui/modal": "2.2.8",
+    "@heroui/popover": "2.3.10",
+    "@heroui/progress": "2.2.7",
+    "@heroui/scroll-shadow": "2.3.6",
+    "@heroui/system": "2.4.7",
+    "@heroui/table": "2.2.9",
+    "@heroui/theme": "2.4.6",
+    "@heroui/tabs": "2.2.8",
+    "@heroui/tooltip": "2.2.8",
     "framer-motion": "11.18.2",
     "next-themes": "0.4.4",
     "react-icons": "5.4.0"
