--- a/packages/uniform/package.json
+++ b/packages/uniform/package.json
@@ -123,14 +123,14 @@
     "@fuf-stack/pixel-utils": "workspace:*",
     "@fuf-stack/pixels": "workspace:*",
     "@fuf-stack/veto": "workspace:*",
-    "@nextui-org/button": "2.2.9",
-    "@nextui-org/checkbox": "2.3.8",
-    "@nextui-org/input": "2.4.8",
-    "@nextui-org/radio": "2.3.8",
-    "@nextui-org/select": "2.4.9",
-    "@nextui-org/switch": "2.2.8",
-    "@nextui-org/system": "2.4.6",
-    "@nextui-org/theme": "2.4.5",
+    "@heroui/button": "2.2.10",
+    "@heroui/checkbox": "2.3.9",
+    "@heroui/input": "2.4.10",
+    "@heroui/radio": "2.3.9",
+    "@heroui/select": "2.4.10",
+    "@heroui/switch": "2.2.9",
+    "@heroui/system": "2.4.7",
+    "@heroui/theme": "2.4.6",
     "@react-aria/visually-hidden": "3.8.19",
     "framer-motion": "11.18.2",
     "react-icons": "5.4.0",
