--- a/packages/pixel-utils/package.json
+++ b/packages/pixel-utils/package.json
@@ -43,10 +43,12 @@
   "dependencies": {
     "@heroui/theme": "2.4.6",
     "classnames": "2.5.1",
+    "slug": "9.1.0",
     "tailwind-merge": "2.6.0",
     "tailwind-variants": "0.3.1"
   },
   "devDependencies": {
-    "@repo/tsup-config": "workspace:*"
+    "@repo/tsup-config": "workspace:*",
+    "@types/slug": "5.0.9"
   }
 }
