--- a/packages/uniform/package.json
+++ b/packages/uniform/package.json
@@ -135,8 +135,7 @@
     "framer-motion": "11.18.2",
     "react-icons": "5.4.0",
     "react-hook-form": "7.54.2",
-    "react-select": "5.9.0",
-    "slug": "9.1.0"
+    "react-select": "5.9.0"
   },
   "devDependencies": {
     "@repo/storybook-config": "workspace:*",
@@ -146,7 +145,6 @@
     "@types/debug": "4.1.12",
     "@types/react": "19.0.7",
     "@types/react-dom": "19.0.3",
-    "@types/slug": "5.0.9",
     "react": "19.0.0",
     "react-dom": "19.0.0"
   }
