--- a/packages/pixels/package.json
+++ b/packages/pixels/package.json
@@ -49,6 +49,11 @@
       "import": "./dist/Button/index.js",
       "require": "./dist/Button/index.cjs"
     },
+    "./ButtonGroup": {
+      "types": "./dist/ButtonGroup/index.d.ts",
+      "import": "./dist/ButtonGroup/index.js",
+      "require": "./dist/ButtonGroup/index.cjs"
+    },
     "./Card": {
       "types": "./dist/Card/index.d.ts",
       "import": "./dist/Card/index.js",
