ci: do not run sonarqube for renovate branches

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,8 @@ on:
   push:
     branches:
       - '**'
+      # not for renovate branches
+      - '!renovate/**'
 
 # Cancel in-progress runs when a new workflow is triggered
 concurrency:
