--- a/packages/pixels/package.json
+++ b/packages/pixels/package.json
@@ -170,6 +170,7 @@
     "@heroui/table": "2.2.15",
     "@heroui/theme": "2.4.12",
     "@heroui/tabs": "2.2.13",
+    "@heroui/toast": "2.0.6",
     "@heroui/tooltip": "2.2.13",
     "framer-motion": "12.5.0",
     "next-themes": "0.4.6",
