fix(veto): bundle zodex + remove validator dep

--- a/packages/veto/package.json
+++ b/packages/veto/package.json
@@ -31,13 +31,9 @@
     "dev": "tsup --watch",
     "test": "vitest ./src"
   },
-  "dependencies": {
-    "validator": "13.15.0",
-    "zodex": "0.18.2"
-  },
   "devDependencies": {
-    "@types/validator": "13.12.3",
     "dts-bundle-generator": "9.5.1",
-    "zod": "3.24.2"
+    "zod": "3.24.2",
+    "zodex": "0.18.2"
   }
 }
