--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@fuf-stack/vitest-config": "1.1.2",
     "@types/node": "22.13.14",
     "color2k": "2.0.3",
-    "ts-node": "10.9.2",
+    "tsx": "4.19.2",
     "typescript": "5.8.2"
   },
   "workspaces": [
