fix(pixels): add css file exports when exists

--- a/packages/pixels/package.json
+++ b/packages/pixels/package.json
@@ -74,6 +74,7 @@
       "import": "./dist/Json/index.js",
       "require": "./dist/Json/index.cjs"
     },
+    "./Json.css": "./dist/Json/index.css",
     "./Label": {
       "types": "./dist/Label/index.d.ts",
       "import": "./dist/Label/index.js",
