feat(pixels): add initial circular progress component
#688

--- a/packages/pixels/package.json
+++ b/packages/pixels/package.json
@@ -59,6 +59,11 @@
       "import": "./dist/Card/index.js",
       "require": "./dist/Card/index.cjs"
     },
+    "./CircularProgress": {
+      "types": "./dist/CircularProgress/index.d.ts",
+      "import": "./dist/CircularProgress/index.js",
+      "require": "./dist/CircularProgress/index.cjs"
+    },
     "./Drawer": {
       "types": "./dist/Drawer/index.d.ts",
       "import": "./dist/Drawer/index.js",
