feat(pixels): refactor CircularProgress to ProgressCircular

--- a/packages/pixels/package.json
+++ b/packages/pixels/package.json
@@ -59,10 +59,10 @@
       "import": "./dist/Card/index.js",
       "require": "./dist/Card/index.cjs"
     },
-    "./CircularProgress": {
-      "types": "./dist/CircularProgress/index.d.ts",
-      "import": "./dist/CircularProgress/index.js",
-      "require": "./dist/CircularProgress/index.cjs"
+    "./ProgressCircular": {
+      "types": "./dist/ProgressCircular/index.d.ts",
+      "import": "./dist/ProgressCircular/index.js",
+      "require": "./dist/ProgressCircular/index.cjs"
     },
     "./Drawer": {
       "types": "./dist/Drawer/index.d.ts",
