fix(pixels): add correct index export for Toast

--- a/packages/pixels/package.json
+++ b/packages/pixels/package.json
@@ -123,6 +123,11 @@
       "import": "./dist/Tabs/index.js",
       "require": "./dist/Tabs/index.cjs"
     },
+    "./Toast": {
+      "types": "./dist/Toast/index.d.ts",
+      "import": "./dist/Toast/index.js",
+      "require": "./dist/Toast/index.cjs"
+    },
     "./Tooltip": {
       "types": "./dist/Tooltip/index.d.ts",
       "import": "./dist/Tooltip/index.js",
