--- a/packages/config/storybook-config/package.json
+++ b/packages/config/storybook-config/package.json
@@ -12,24 +12,20 @@
   "devDependencies": {
     "@repo/tailwind-config": "workspace:*",
     "@repo/vite-config": "workspace:*",
-    "@storybook/addon-a11y": "8.6.14",
-    "@storybook/addon-actions": "8.6.14",
+    "@storybook/addon-a11y": "9.0.17",
     "@storybook/addon-coverage": "2.0.0",
-    "@storybook/addon-essentials": "8.6.14",
-    "@storybook/addon-interactions": "8.6.14",
-    "@storybook/addon-links": "8.6.14",
-    "@storybook/blocks": "8.6.14",
-    "@storybook/node-logger": "8.6.14",
-    "@storybook/react": "8.6.14",
-    "@storybook/react-vite": "8.6.14",
-    "@storybook/test": "8.6.14",
+    "@storybook/addon-docs": "9.0.17",
+    "@storybook/addon-links": "9.0.17",
+    "@storybook/addon-vitest": "^9.0.17",
+    "@storybook/react-vite": "9.0.17",
     "@storybook/test-runner": "0.23.0",
     "@testing-library/react": "16.3.0",
+    "@vueless/storybook-dark-mode": "9.0.6",
     "axe-playwright": "2.1.0",
+    "jsdom": "26.1.0",
+    "playwright": "^1.52.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "storybook": "8.6.14",
-    "storybook-dark-mode": "4.0.2",
-    "jsdom": "26.1.0"
+    "storybook": "9.0.17"
   }
 }
