feat(pixel-utils,pixels,uniform)!: migrate to tailwind v4 + heroui v2.8.0

--- a/packages/config/storybook-config/tsconfig.json
+++ b/packages/config/storybook-config/tsconfig.json
@@ -1,4 +1,3 @@
 {
-  "extends": "@fuf-stack/typescript-config/base.json",
-  "references": [{ "path": "../../pixels" }]
+  "extends": "@fuf-stack/typescript-config/base.json"
 }
