--- a/packages/veto/package.json
+++ b/packages/veto/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@fuf-stack/veto",
   "description": "fuf schema validation library",
+  "author": "Fröhlich ∧ Frei",
   "version": "0.12.1",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
