--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -45,5 +45,9 @@
     ["cn\\((([^()]*|\\([^()]*\\))*)\\)", "[\"'`]([^\"'`]*).*?[\"'`]"],
     ["tv\\((([^()]*|\\([^()]*\\))*)\\)", "[\"'`]([^\"'`]*).*?[\"'`]"]
   ],
-  "cSpell.words": ["subcomponents", "subline"]
+  "cSpell.words": [
+    "Fröhlich",
+    "subcomponents",
+    "subline"
+  ]
 }
