--- a/packages/config/storybook-config/package.json
+++ b/packages/config/storybook-config/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@repo/storybook-config",
-  "description": "uniforms shared storybook config",
-  "version": "0.0.1",
+  "description": "shared storybook config",
   "private": true,
-  "main": "index.js",
+  "type": "module",
+  "main": "./main.ts",
   "scripts": {
     "storybook": "storybook dev -p 6006",
     "storybook:build": "storybook build --quiet",
@@ -16,16 +16,9 @@
     "@storybook/addon-coverage": "2.0.0",
     "@storybook/addon-docs": "9.0.17",
     "@storybook/addon-links": "9.0.17",
-    "@storybook/addon-vitest": "^9.0.17",
     "@storybook/react-vite": "9.0.17",
-    "@storybook/test-runner": "0.23.0",
-    "@testing-library/react": "16.3.0",
+    "@vitejs/plugin-react": "4.3.4",
     "@vueless/storybook-dark-mode": "9.0.6",
-    "axe-playwright": "2.1.0",
-    "jsdom": "26.1.0",
-    "playwright": "^1.52.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
     "storybook": "9.0.17"
   }
 }
