--- a/packages/config/vite-config/package.json
+++ b/packages/config/vite-config/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@repo/vite-config",
-  "description": "uniforms shared vite config",
-  "version": "0.0.1",
+  "description": "shared vite config",
   "private": true,
-  "main": "index.js",
+  "type": "module",
+  "main": "./vite.config.ts",
   "devDependencies": {
     "@vitejs/plugin-react": "4.6.0",
     "vite": "7.0.4",
