--- a/packages/pixel-motion/package.json
+++ b/packages/pixel-motion/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@fuf-stack/pixel-motion",
   "description": "fuf pixel motion with framer motion",
-  "author": "Hannes Tiede",
+  "author": "Fröhlich ∧ Frei",
   "version": "1.0.18",
   "type": "module",
   "main": "./dist/index.cjs",
