--- a/packages/pixel-utils/package.json
+++ b/packages/pixel-utils/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@fuf-stack/pixel-utils",
   "description": "fuf pixels helper utils",
-  "author": "Hannes Tiede",
+  "author": "Fröhlich ∧ Frei",
   "version": "0.5.5",
   "type": "module",
   "main": "./dist/index.cjs",
@@ -41,11 +41,11 @@
     "prepack": "pnpm build"
   },
   "dependencies": {
-    "@heroui/theme": "2.4.13",
+    "@heroui/theme": "2.4.19",
     "classnames": "2.5.1",
     "slug": "9.1.0",
-    "tailwind-merge": "2.6.0",
-    "tailwind-variants": "0.3.1"
+    "tailwind-merge": "3.3.1",
+    "tailwind-variants": "1.0.0"
   },
   "devDependencies": {
     "@repo/tsup-config": "workspace:*",
