--- a/packages/pixels/package.json
+++ b/packages/pixels/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@fuf-stack/pixels",
   "description": "fuf core react component library",
-  "author": "Hannes Tiede",
+  "author": "Fröhlich ∧ Frei",
   "version": "0.45.0",
   "type": "module",
   "main": "./dist/index.cjs",
@@ -165,27 +165,27 @@
   },
   "dependencies": {
     "@fuf-stack/pixel-utils": "workspace:*",
-    "@heroui/alert": "2.2.17",
-    "@heroui/avatar": "2.2.13",
-    "@heroui/accordion": "2.2.14",
-    "@heroui/badge": "2.2.10",
-    "@heroui/breadcrumbs": "2.2.13",
-    "@heroui/button": "2.2.17",
-    "@heroui/card": "2.2.16",
-    "@heroui/chip": "2.2.13",
-    "@heroui/divider": "2.2.11",
-    "@heroui/drawer": "2.2.14",
-    "@heroui/dropdown": "2.3.17",
-    "@heroui/modal": "2.2.14",
-    "@heroui/popover": "2.3.17",
-    "@heroui/progress": "2.2.13",
-    "@heroui/scroll-shadow": "2.3.11",
-    "@heroui/system": "2.4.13",
-    "@heroui/table": "2.2.16",
-    "@heroui/theme": "2.4.13",
-    "@heroui/tabs": "2.2.14",
-    "@heroui/toast": "2.0.7",
-    "@heroui/tooltip": "2.2.14",
+    "@heroui/alert": "2.2.23",
+    "@heroui/avatar": "2.2.19",
+    "@heroui/accordion": "2.2.20",
+    "@heroui/badge": "2.2.15",
+    "@heroui/breadcrumbs": "2.2.19",
+    "@heroui/button": "2.2.23",
+    "@heroui/card": "2.2.22",
+    "@heroui/chip": "2.2.19",
+    "@heroui/divider": "2.2.16",
+    "@heroui/drawer": "2.2.20",
+    "@heroui/dropdown": "2.3.23",
+    "@heroui/modal": "2.2.20",
+    "@heroui/popover": "2.3.23",
+    "@heroui/progress": "2.2.19",
+    "@heroui/scroll-shadow": "2.3.16",
+    "@heroui/system": "2.4.19",
+    "@heroui/table": "2.2.23",
+    "@heroui/theme": "2.4.19",
+    "@heroui/tabs": "2.2.20",
+    "@heroui/toast": "2.0.13",
+    "@heroui/tooltip": "2.2.20",
     "framer-motion": "12.23.6",
     "next-themes": "0.4.6",
     "react-icons": "5.5.0"
