fix: use vite plugin insted of postcss for tailwind

--- a/.npmrc
+++ b/.npmrc
@@ -15,6 +15,7 @@ public-hoist-pattern[]=tailwindcss
 public-hoist-pattern[]=tsup
 
 # @repo/vite-config
+public-hoist-pattern[]=@tailwindcss/vite
 public-hoist-pattern[]=@vitejs/plugin-react
 public-hoist-pattern[]=vite
 public-hoist-pattern[]=vite-tsconfig-paths
