--- a/packages/config/vite-config/package.json
+++ b/packages/config/vite-config/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "main": "./vite.config.ts",
   "devDependencies": {
+    "@tailwindcss/vite": "4.1.11",
     "@vitejs/plugin-react": "4.6.0",
     "vite": "7.0.4",
     "vite-tsconfig-paths": "5.1.4"
