--- a/packages/pixels/package.json
+++ b/packages/pixels/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@fuf-stack/pixels",
   "description": "fuf core react component library",
-  "author": "Fröhlich ∧ Freii",
+  "author": "Fröhlich ∧ Frei",
   "version": "0.45.0",
   "type": "module",
   "main": "./dist/index.cjs",
