--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "@fuf-stack/project-cli-tools": "1.0.8",
     "@fuf-stack/typescript-config": "0.3.0",
     "@fuf-stack/vitest-config": "1.1.2",
+    "@repo/storybook-config": "workspace:*",
+    "@repo/tailwind-config": "workspace:*",
+    "@repo/tsup-config": "workspace:*",
+    "@repo/vite-config": "workspace:*",
     "@types/node": "22.16.4",
     "color2k": "2.0.3",
     "tsx": "4.20.3",
