--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@repo/vite-config": "workspace:*",
     "@types/node": "22.18.0",
     "color2k": "2.0.3",
+    "jsdom": "26.1.0",
     "tsx": "4.20.5",
     "typescript": "5.9.2"
   },
