--- a/renovate.json5
+++ b/renovate.json5
@@ -15,7 +15,7 @@
   ignorePaths: ['/node_modules/'],
   // wait 3 days before creating mrs (supply chain attacks)
   // see: https://docs.renovatebot.com/configuration-options/#minimumreleaseage
-  minimumReleaseAge: 3,
+  minimumReleaseAge: '3 days',
   // see: https://docs.renovatebot.com/configuration-options/#prconcurrentlimit
   prConcurrentLimit: 20,
   // only rebase merge requests when they become conflicted
