feat(megapixels): add initial megapixels package

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "references": [
+    { "path": "packages/megapixels" },
     { "path": "packages/config/storybook-config" },
     { "path": "packages/pixel-motion" },
     { "path": "packages/pixel-utils" },
