chore: migrate to @fuf-stack/eslint-config-fuf v1

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,11 @@
 {
+  // include additional files for linting here
+  "include": [
+    "./**/*.ts",
+    "./**/*.tsx",
+    "vitest.config.mts",
+    "vitest.workspace.ts"
+  ],
   "references": [
     { "path": "packages/megapixels" },
     { "path": "packages/config/storybook-config" },
