chore: some linting fixes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,7 @@
 {
+  "compilerOptions": {
+    "strictNullChecks": true
+  },
   // include additional files for linting here
   "include": [
     "./**/*.ts",
