--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -1,4 +1,5 @@
 {
+  "packages/megapixels": "0.0.0",
   "packages/pixel-motion": "1.0.22",
   "packages/pixel-utils": "1.0.4",
   "packages/pixels": "1.2.1",
