fix(veto): lock zod version to 3.24.3

--- a/renovate.json5
+++ b/renovate.json5
@@ -41,5 +41,11 @@
       matchPackageNames: ['framer-motion'],
       excludeUpdateTypes: ['patch'],
     },
+
+    // lock zod at version v3.24.3 to avoid type infer issues
+    {
+      matchPackageNames: ['zod'],
+      allowedVersions: '>=3.24.3',
+    },
   ],
 }
