--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
   "include": [
     "./**/*.ts",
     "./**/*.tsx",
+    "./packages/config/storybook-config/.storybook/main.ts",
     "vitest.config.mts",
     "vitest.workspace.ts"
   ],
