--- a/packages/pixels/.eslintrc
+++ b/packages/pixels/.eslintrc
@@ -3,14 +3,14 @@
     {
       "files": ["*.ts", "*.tsx"],
       "rules": {
-        "import/no-unresolved": "off"
-      }
+        "import/no-unresolved": "off",
+      },
     },
     {
       "files": ["*.stories.tsx"],
       "rules": {
-        "import/no-extraneous-dependencies": "off"
-      }
-    }
-  ]
+        "import-x/no-extraneous-dependencies": "off",
+      },
+    },
+  ],
 }
