chore: make packages composite

--- a/packages/pixels/tsconfig.json
+++ b/packages/pixels/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@fuf-stack/typescript-config/react-library.json",
   "compilerOptions": {
+    "composite": true,
     "tsBuildInfoFile": "node_modules/.cache/tsbuildinfo.json"
   },
   "include": ["src", "globals.d.ts"]
