--- a/packages/veto/tsconfig.json
+++ b/packages/veto/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "@fuf-stack/typescript-config/base.json",
   "compilerOptions": {
     "baseUrl": ".",
+    "composite": true,
     "paths": {
       "src/*": ["./src/*"],
       "test/*": ["./test/*"]
