--- a/packages/pixel-motion/tsconfig.json
+++ b/packages/pixel-motion/tsconfig.json
@@ -1,6 +1,8 @@
 {
+  "$schema": "https://json.schemastore.org/tsconfig",
   "extends": "@fuf-stack/typescript-config/react-library.json",
   "compilerOptions": {
+    "composite": true,
     "tsBuildInfoFile": "node_modules/.cache/tsbuildinfo.json"
   },
   "include": ["src"]
