fix(megapixels): add debug to Filter

--- a/packages/megapixels/package.json
+++ b/packages/megapixels/package.json
@@ -51,6 +51,7 @@
     "@fuf-stack/pixels": "workspace:*",
     "@fuf-stack/uniform": "workspace:*",
     "@fuf-stack/veto": "workspace:*",
+    "debug": "4.3.7",
     "react-icons": "5.5.0"
   },
   "devDependencies": {
