--- a/packages/uniform/package.json
+++ b/packages/uniform/package.json
@@ -16,15 +16,15 @@
       "import": "./dist/index.js",
       "require": "./dist/index.cjs"
     },
+    "./Array": {
+      "types": "./dist/Array/index.d.ts",
+      "import": "./dist/Array/index.js",
+      "require": "./dist/Array/index.cjs"
+    },
     "./CheckboxGroup": {
       "types": "./dist/CheckboxGroup/index.d.ts",
       "import": "./dist/CheckboxGroup/index.js",
       "require": "./dist/CheckboxGroup/index.cjs"
-    },
-    "./FieldArray": {
-      "types": "./dist/FieldArray/index.d.ts",
-      "import": "./dist/FieldArray/index.js",
-      "require": "./dist/FieldArray/index.cjs"
     },
     "./Form": {
       "types": "./dist/Form/index.d.ts",
