fix(uniform): rename CheckboxGroup to Checkboxes

--- a/packages/uniform/package.json
+++ b/packages/uniform/package.json
@@ -21,10 +21,10 @@
       "import": "./dist/Array/index.js",
       "require": "./dist/Array/index.cjs"
     },
-    "./CheckboxGroup": {
-      "types": "./dist/CheckboxGroup/index.d.ts",
-      "import": "./dist/CheckboxGroup/index.js",
-      "require": "./dist/CheckboxGroup/index.cjs"
+    "./Checkboxes": {
+      "types": "./dist/Checkboxes/index.d.ts",
+      "import": "./dist/Checkboxes/index.js",
+      "require": "./dist/Checkboxes/index.cjs"
     },
     "./Form": {
       "types": "./dist/Form/index.d.ts",
