fix(uniform): rename RadioGroup to Radios

--- a/packages/uniform/package.json
+++ b/packages/uniform/package.json
@@ -76,10 +76,10 @@
       "import": "./dist/RadioBoxes/index.js",
       "require": "./dist/RadioBoxes/index.cjs"
     },
-    "./RadioGroup": {
-      "types": "./dist/RadioGroup/index.d.ts",
-      "import": "./dist/RadioGroup/index.js",
-      "require": "./dist/RadioGroup/index.cjs"
+    "./Radios": {
+      "types": "./dist/Radios/index.d.ts",
+      "import": "./dist/Radios/index.js",
+      "require": "./dist/Radios/index.cjs"
     },
     "./RadioTabs": {
       "types": "./dist/RadioTabs/index.d.ts",
