feat(uniform): add useWatchUserChange hook

--- a/packages/uniform/package.json
+++ b/packages/uniform/package.json
@@ -86,6 +86,11 @@
       "import": "./dist/hooks/useUniformFieldArray/index.js",
       "require": "./dist/hooks/useUniformFieldArray/index.cjs"
     },
+    "./hooks/useWatchUserChange": {
+      "types": "./dist/hooks/useWatchUserChange/index.d.ts",
+      "import": "./dist/hooks/useWatchUserChange/index.js",
+      "require": "./dist/hooks/useWatchUserChange/index.cjs"
+    },
     "./Input": {
       "types": "./dist/Input/index.d.ts",
       "import": "./dist/Input/index.js",
