--- a/packages/uniform/package.json
+++ b/packages/uniform/package.json
@@ -177,6 +177,7 @@
     "@heroui/button": "2.2.24",
     "@heroui/checkbox": "2.3.24",
     "@heroui/input": "2.4.25",
+    "@heroui/number-input": "2.0.18",
     "@heroui/radio": "2.3.24",
     "@heroui/select": "2.4.25",
     "@heroui/switch": "2.2.22",
