chore: change deps again

--- a/packages/veto/package.json
+++ b/packages/veto/package.json
@@ -31,7 +31,7 @@
     "dev": "tsup --watch",
     "test": "vitest ./src"
   },
-  "devDependencies": {
+  "dependencies": {
     "zod": "3.24.3",
     "zodex": "0.18.2"
   }
