--- a/packages/uniform/package.json
+++ b/packages/uniform/package.json
@@ -184,6 +184,7 @@
     "@heroui/system": "2.4.20",
     "@heroui/theme": "2.4.20",
     "@react-aria/visually-hidden": "3.8.28",
+    "debug": "4.4.3",
     "framer-motion": "12.23.24",
     "react-icons": "5.5.0",
     "react-hook-form": "7.55.0",
