--- a/release-please-config.json
+++ b/release-please-config.json
@@ -3,7 +3,7 @@
   "release-type": "node",
   "include-component-in-tag": true,
   "packages": {
-    "packages/megapixels": { "initial-version": "0.0.1" },
+    "packages/megapixels": {},
     "packages/pixel-motion": {},
     "packages/pixel-utils": {},
     "packages/pixels": {},
