--- a/packages/megapixels/package.json
+++ b/packages/megapixels/package.json
@@ -30,7 +30,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/fuf-stack/megapixels.git",
+    "url": "https://github.com/fuf-stack/pixels.git",
     "directory": "packages/megapixels"
   },
   "bugs": {
