--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -11,6 +11,12 @@ on:
     branches:
       - main
 
+# Ensure only one release workflow runs at a time
+# Queue new runs and wait for in-progress releases to complete
+concurrency:
+  group: release-${{ github.ref }}
+  cancel-in-progress: false
+
 jobs:
   release-please:
     runs-on: ubuntu-latest
