fix: update storybook to latest

--- a/packages/config/tailwind-config/package.json
+++ b/packages/config/tailwind-config/package.json
@@ -2,6 +2,7 @@
   "name": "@repo/tailwind-config",
   "description": "shared tailwind config",
   "private": true,
+  "type": "module",
   "main": "./tailwind.config.ts",
   "devDependencies": {
     "@heroui/theme": "2.4.20",
