feat(uniform): add SwitchBox component

--- a/packages/uniform/package.json
+++ b/packages/uniform/package.json
@@ -136,6 +136,11 @@
       "import": "./dist/Switch/index.js",
       "require": "./dist/Switch/index.cjs"
     },
+    "./SwitchBox": {
+      "types": "./dist/SwitchBox/index.d.ts",
+      "import": "./dist/SwitchBox/index.js",
+      "require": "./dist/SwitchBox/index.cjs"
+    },
     "./TextArea": {
       "types": "./dist/TextArea/index.d.ts",
       "import": "./dist/TextArea/index.js",
