feat(uniform): add Slider component

--- a/packages/uniform/package.json
+++ b/packages/uniform/package.json
@@ -186,6 +186,7 @@
     "@heroui/radio": "2.3.24",
     "@heroui/select": "2.4.25",
     "@heroui/switch": "2.2.22",
+    "@heroui/slider": "2.4.24",
     "@heroui/system": "2.4.20",
     "@heroui/theme": "2.4.20",
     "@react-aria/visually-hidden": "3.8.28",
