chore(uniform): add Slider export to package.json

--- a/packages/uniform/package.json
+++ b/packages/uniform/package.json
@@ -126,6 +126,11 @@
       "import": "./dist/Select/index.js",
       "require": "./dist/Select/index.cjs"
     },
+    "./Slider": {
+      "types": "./dist/Slider/index.d.ts",
+      "import": "./dist/Slider/index.js",
+      "require": "./dist/Slider/index.cjs"
+    },
     "./SubmitButton": {
       "types": "./dist/SubmitButton/index.d.ts",
       "import": "./dist/SubmitButton/index.js",
