feat(uniform): add FieldCard component

--- a/packages/uniform/package.json
+++ b/packages/uniform/package.json
@@ -26,6 +26,11 @@
       "import": "./dist/FieldArray/index.js",
       "require": "./dist/FieldArray/index.cjs"
     },
+    "./FieldCard": {
+      "types": "./dist/FieldCard/index.d.ts",
+      "import": "./dist/FieldCard/index.js",
+      "require": "./dist/FieldCard/index.cjs"
+    },
     "./Form": {
       "types": "./dist/Form/index.d.ts",
       "import": "./dist/Form/index.js",
