--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@fuf-stack/eslint-config-fuf": "1.1.12",
     "@fuf-stack/project-cli-tools": "1.0.12",
     "@fuf-stack/typescript-config": "0.3.0",
-    "@fuf-stack/vitest-config": "2.0.0",
+    "@fuf-stack/vitest-config": "4.1.0",
     "@repo/storybook-config": "workspace:*",
     "@repo/tailwind-config": "workspace:*",
     "@repo/tsup-config": "workspace:*",
@@ -24,7 +24,8 @@
     "color2k": "2.0.3",
     "jsdom": "27.0.0",
     "tsx": "4.20.6",
-    "typescript": "5.9.3"
+    "typescript": "5.9.3",
+    "vite-tsconfig-paths": "5.1.4"
   },
   "workspaces": [
     "packages/*"
